--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "author": "Redmund Nacario",
   "license": "MIT",
   "dependencies": {
-    "gulp": "^4.0.2"
+    "browser-sync": "^2.26.13",
+    "gulp": "^4.0.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "node-sass": "^5.0.0"
   }
 }
