--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "browser-sync": "^2.26.13",
     "gulp": "^4.0.2",
     "gulp-cssnano": "^2.1.3",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "node-sass": "^5.0.0"
+    "node-sass": "^5.0.0",
+    "uglify": "^0.1.5"
   }
 }
