--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
   "dependencies": {
     "browser-sync": "^2.26.13",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
+    "gulp-kit": "^0.3.0",
+    "gulp-notifier": "^1.0.6",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-zip": "^5.0.2",
     "node-sass": "^5.0.0",
     "uglify": "^0.1.5"
   }
