--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "Redmund Nacario",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.12.10",
     "browser-sync": "^2.26.13",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
@@ -20,8 +22,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-zip": "^5.0.2",
-    "node-sass": "^5.0.0",
-    "uglify": "^0.1.5"
+    "node-sass": "^5.0.0"
   }
 }
